# backsynth

./: CMakeLists.txt  README.md  cmake_uninstall.cmake.in
cli/: CMakeLists.txt  musil.cpp
examples/: basic.scm  env_and_clock_benchmark.scm  file_watcher.scm  infinite_recursion.scm  osc_messages.scm  overview.scm  plot_adv.scm  plot_basic.scm  stress_test.scm  system_demo.scm  udp_receiver.scm  udp_sender.scm
ide/: CMakeLists.txt  musil_ide.cpp
resources/: make_icon.sh
src/: CMakeLists.txt  core.h  musil.h  plotting.h  scientific.h  scientific.scm  stdlib.scm  system.h
src/plotting/: svg_tools.h
src/scientific/: KNN.h  Matrix.h  PCA.h  algorithms.h
tests/: core_test.scm  test_core.scm  test_reader.scm  test_scientific.scm
